--- a/A1Evo_MJ_Custom.html
+++ b/A1Evo_MJ_Custom.html
@@ -226,7 +226,7 @@
 </head>
 <body>
 <div class="container">
-  <h2>A1Evo <strong>1-click</strong> Audyssey Optimization Tool <span class="version-number">MJC - PureEQ v1.0.1</span></h2>
+  <h2>A1Evo <strong>1-click</strong> Audyssey Optimization Tool <span class="version-number">MJC - PureEQ v1.0.2</span></h2>
   <h3>Steps</h3>
   <ol>
     <li class="smaller-font">Download and install the free room correction software Room EQ Wizard (v5.40 Beta) in your computer
@@ -404,14 +404,27 @@
         const checkMeasurementCount = async () => {
           const measurements = await fetch_mREW();
           let mCount = Object.keys(measurements).length;
-          if(isCirrusLogic) (mCount--);
-          if (mCount === totalMeasurements) {
+          let isAudy = true;
+          if (mCount > 0) {
+            isAudy = await checkIfAudyMeasurement();
+          }
+          if(isCirrusLogic && isAudy) (mCount--);
+          if (mCount === totalMeasurements && isAudy) {
             document.getElementById("button2").disabled = false;
             console.infoUpdate(`All ${isCirrusLogic ? mCount + 1 : mCount} measurements have now been successfully imported!`);
             clearInterval(intervalId);
-          } else {
+          }
+          else if (mCount > 0 && !isAudy) {
+            document.getElementById("button2").disabled = false;
+            console.infoUpdate("Skipping measurement count check "
+              + (isCirrusLogic ? "and ignoring Audy mic cal " : "")
+              + "- manual measurements detected!");
+            clearInterval(intervalId);
+          }
+          else {
             console.infoUpdate(`Expecting ${totalMeasurements} measurements`
-              + (isCirrusLogic ? " and Audyssey microphone calibration file" : "") + ` to be imported into REW...`);
+              + (isCirrusLogic ? " and Audy mic cal file" : "")
+              + ` to be imported into REW...`);
           }
         }
         const intervalId = setInterval(checkMeasurementCount, 1000);
@@ -424,6 +437,12 @@
       const dotIndex = fileName.lastIndexOf(".");
       const modifiedName = fileName.substring(0, dotIndex) + suffix;
       return modifiedName;
+    }
+    async function checkIfAudyMeasurement() {
+      const response = await fetchSafe('impulse-response', 1);
+      const bytes = Uint8Array.from(atob(response.data), c => c.charCodeAt(0));
+      const totalSamples = bytes.length / 4;
+      return (totalSamples === 16384);
     }
     function getFLDistance(channels) {
       let flIndex = 0;
@@ -613,8 +632,13 @@
       const measurements = await fetch_mREW();
       const titles = {}; let titleIndices = {};
       let mCount = Object.keys(measurements).length;
+      let isAudy = true;
+      if (mCount > 0) {
+        isAudy = await checkIfAudyMeasurement();
+      }
+      Object.freeze(isAudy);
       if (!mCount) { console.error(`There are no measurements in REW!`); throw new Error; }
-      if (isCirrusLogic) {mCount--;};
+      if (isCirrusLogic && isAudy) {mCount--;};
       let baseMessage = "Resetting IR windows, EQ type, target shape and smoothing for all measurements..."
       for (let q = 1; q <= mCount; q++) {
         await postSafe(`${baseUrl}/${q}/ir-windows`, { leftWindowType: "Rectangular", rightWindowType: "Rectangular" }, "Update processed");
@@ -652,23 +676,49 @@
           throw new Error;
         }
       }
+      let mPos = 0;
       nSpeakers = 0;
       nSubs = 0;
       for (const titleKey in titleIndices) {
         const indices = titleIndices[titleKey];
-        if (indices[0] != Math.min(...indices)) {
-          console.error(`MLP measurement needs to be the first measurement for ${titleKey} channel!`);
-          throw new Error;
+        // first check for same # positions across channels
+        if (mPos === 0) {
+          // initilize - assuming sorted, no chance of SW/SWMIX being first
+          mPos = indices.length;
+          Object.freeze(mPos);
         }
-        if (titleKey === "SWMIX") {
-          nSubs = 1;
-        }
-        else if (titleKey.startsWith("SW")) {
-          for (let i = 0; i < titleIndices[titleKey].length; i++) {
-            swIdx = String(titleIndices[titleKey][i]);
-            if (swIdx.length === 2 && swIdx.endsWith("0")) {
-              nSubs++;
+        else {
+          // for directional SW, it's a 2-D indices list
+          if (titleKey.startsWith("SW") && bassMode === "Directional") {
+            for (let i = 0; i < indices.length; i++) {
+              if (mPos != indices[i].length) {
+                console.error("Inconsistent # of measurements - all channels must have the same number of measurements!");
+                throw new Error;
+              }
             }
+          }
+          // for everything else, 1-D indices list
+          else {
+            if (mPos != indices.length) {
+              console.error("Inconsistent # of measurements - all channels must have the same number of measurements!");
+              throw new Error;
+            }
+          }
+        }
+        // find channel, speaker & subwoofer counts
+        if (titleKey.startsWith("SW")) {
+          if (bassMode === "Directional") {
+            // count # of directional subs
+            for (let i = 0; i < titleIndices[titleKey].length; i++) {
+              swIdx = String(titleIndices[titleKey][i]);
+              if (swIdx.length === 2 && swIdx.endsWith("0")) {
+                nSubs++;
+              }
+            }
+          }
+          else {
+            // for standard bass, audyssey always 'sees' one virtual sub
+            nSubs = 1;
           }
         }
         else {
@@ -688,7 +738,7 @@
         console.error('There seems to be a problem with REW installation!');
         throw new Error;
       }
-      if (isCirrusLogic) {await addmicCal();} // only apply if all sanity checks pass
+      if (isCirrusLogic && isAudy) {await addmicCal();} // only apply if all sanity checks pass
       const tcResponse = await fetch('http://localhost:4735/eq/house-curve');
       if (tcResponse.ok) {
         const target = await tcResponse.json();
